# x-cli

./: LLMs.md  OAUTH2_HANDOFF.md  README.md  REVIEW.md  TODO.md  plan.md  pyproject.toml
src/x_cli/: api.py  auth.py  cli.py  xdk_auth.py
tests/: test_api_xdk_errors.py  test_xdk_auth.py
